# phlex

./: .clang-format  .cmake-format.json  CMakeLists.txt  NOTICE  README.md
.github/workflows/: add-issues.yaml
Modules/: Findjsonnet.cmake  NProc.cmake
form/: CMakeLists.txt  README.md  phlex_toy_config.hpp
form/core/: CMakeLists.txt  placement.cpp  placement.hpp  token.cpp  token.hpp
form/form/: CMakeLists.txt  form.cpp  form.hpp  parse_config.cpp  parse_config.hpp  phlex_toy_config.cpp  phlex_toy_core.cpp  phlex_toy_core.hpp
form/persistence/: CMakeLists.txt  ipersistence.hpp  persistence.cpp  persistence.hpp
form/root_storage/: CMakeLists.txt  root_storage.hpp  root_tbranch_container.cpp  root_tbranch_container.hpp  root_tfile.cpp  root_tfile.hpp  root_ttree_container.cpp  root_ttree_container.hpp
form/storage/: CMakeLists.txt  istorage.hpp  storage.cpp  storage.hpp  storage_association.cpp  storage_association.hpp  storage_associative_container.cpp  storage_associative_container.hpp  storage_container.cpp  storage_container.hpp  storage_file.cpp  storage_file.hpp
form/util/: CMakeLists.txt  factories.hpp
phlex/: CMakeLists.txt  concurrency.hpp  configuration.hpp  module.hpp  source.hpp
phlex/app/: CMakeLists.txt  load_module.cpp  load_module.hpp  phlex.cpp  run.cpp  run.hpp  version.cpp.in  version.hpp
phlex/core/: CMakeLists.txt  bound_function.hpp  cached_product_stores.hpp  concepts.hpp  concurrency.cpp  consumer.cpp  consumer.hpp  declared_fold.cpp  declared_fold.hpp  declared_observer.cpp  declared_observer.hpp  declared_output.cpp  declared_output.hpp  declared_predicate.cpp  declared_predicate.hpp  declared_transform.cpp  declared_transform.hpp  declared_unfold.cpp  declared_unfold.hpp  double_bound_function.hpp  edge_creation_policy.cpp  edge_creation_policy.hpp  edge_maker.hpp  end_of_message.cpp  end_of_message.hpp  filter.cpp  filter.hpp  framework_graph.cpp  framework_graph.hpp  fwd.hpp  glue.hpp  graph_proxy.hpp  input_arguments.hpp  message.cpp  message.hpp  message_sender.cpp  message_sender.hpp  multiplexer.cpp  multiplexer.hpp  node_catalog.hpp  (+8 more)
phlex/core/detail/: filter_impl.cpp  filter_impl.hpp  port_names.hpp
phlex/core/dot/: attributes.cpp  attributes.hpp  data_graph.cpp  data_graph.hpp  function_graph.cpp  function_graph.hpp
phlex/core/fold/: send.hpp
phlex/graph/: CMakeLists.txt  serial_node.hpp  serializer_node.cpp  serializer_node.hpp
phlex/metaprogramming/: CMakeLists.txt  delegate.hpp  function_name.cpp  function_name.hpp  to_array.hpp  type_deduction.hpp
phlex/metaprogramming/detail/: basic_concepts.hpp  ctor_reflect_types.hpp  number_output_objects.hpp  number_parameters.hpp  parameter_types.hpp  return_type.hpp
phlex/model/: CMakeLists.txt  algorithm_name.cpp  algorithm_name.hpp  fwd.hpp  handle.hpp  level_counter.cpp  level_counter.hpp  level_hierarchy.cpp  level_hierarchy.hpp  level_id.cpp  level_id.hpp  product_matcher.cpp  product_matcher.hpp  product_store.cpp  product_store.hpp  products.cpp  products.hpp  qualified_name.cpp  qualified_name.hpp
phlex/utilities/: CMakeLists.txt  async_driver.hpp  hashing.cpp  hashing.hpp  resource_usage.cpp  resource_usage.hpp  sized_tuple.hpp  sleep_for.hpp  string_literal.hpp  stripped_name.cpp  stripped_name.hpp  thread_counter.hpp
test/: CMakeLists.txt  allowed_families.cpp  cached_execution.cpp  cached_execution_source.hpp  cached_product_stores.cpp  class_registration.cpp  concepts.cpp  different_hierarchies.cpp  filter.cpp  filter_impl.cpp  fold.cpp  function_name.cpp  function_registration.cpp  hierarchical_nodes.cpp  level_counting.cpp  level_id.cpp  multiple_function_registration.cpp  product_handle.cpp  product_matcher.cpp  product_store.cpp  products_for_output.hpp  replicated.cpp  serializer.cpp  specified_label.cpp  string_literal.cpp  type_deduction.cpp  unfold.cpp  yielding_driver.cpp
test/benchmarks/: CMakeLists.txt  accept_even_ids.cpp  accept_even_numbers.cpp  accept_fibonacci_numbers.cpp  benchmarks_source.cpp  last_index.cpp  plus_101.cpp  plus_one.cpp  read_id.cpp  read_index.cpp  verify_difference.cpp  verify_even_fibonacci_numbers.cpp
test/demo-giantdata/: CMakeLists.txt  log_record.hpp  summed_clamped_waveforms.hpp  unfold_transform_fold.cpp  user_algorithms.cpp  user_algorithms.hpp  waveform_generator.cpp  waveform_generator.hpp  waveform_generator_input.cpp  waveform_generator_input.hpp  waveforms.cpp  waveforms.hpp
test/form/: CMakeLists.txt  reader.cpp  toy_tracker.cpp  toy_tracker.hpp  writer.cpp
test/form/data_products/: CMakeLists.txt  LinkDef.h  dict.h  track_start.cpp  track_start.hpp
test/max-parallelism/: CMakeLists.txt  check_parallelism.cpp
test/memory-checks/: CMakeLists.txt  many_events.cpp
test/mock-workflow/: CMakeLists.txt  G4Stage2.libsonnet  MC_truth_algorithm.cpp  algorithm.hpp  ion_and_scint.cpp  largeant.cpp  pd_fast_sim.cpp  source.cpp  three_tuple_algorithm.cpp  timed_busy.cpp  timed_busy.hpp  types.hpp
test/plugins/: CMakeLists.txt  adder.py  module.cpp  output.cpp  pyadd.jsonnet  pymodule.cpp  pyphlex.py  registry.py
test/python/: .CMakeLists.txt.swp  .gitignore  CMakeLists.txt  driver.cpp  pyadd.jsonnet  pymodule.cpp  registry.py  test_phlex.py
test/utilities/: CMakeLists.txt  sized_tuple.cpp  sleep_for.cpp  thread_counter.cpp
