########################################################################
# FORM integration
#
# Marshal dependencies with find_package() (and reflect in Spack recipe)
# before building code.
#
# Place tests in <top>/test/form.
########################################################################
